--- a/main.html
+++ b/main.html
@@ -3,13 +3,12 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<title>My Favourite Animal</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+		 <h1>My Favorite Animal</h1>
+	    <img src="https://www.southernliving.com/thmb/Rz-dYEhwq_82C5_Y9GLH2ZlEoYw=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/gettyimages-837898820-1-4deae142d4d0403dbb6cb542bfc56934.jpg" alt="A cute dog playing in the park" height="100">
 
 </body>
 
